--- a/index.html
+++ b/index.html
@@ -325,62 +325,62 @@
         // // document.querySelector('#initDataUnsafe').innerHTML = JSON.stringify(initDataUnsafe, null, 2);
         // // document.querySelector('#themeData').html(JSON.stringify(tg.themeParams, null, 2));
 
-        let data = $('.item');
-        var cart = {};
-        $.each(data, function (index, value) {
-            let id = $(value).attr('data-id')
-            let price = $(value).attr('data-price')
-            cart[id] = [price, 1]
-        })
+        // let data = $('.item');
+        // var cart = {};
+        // $.each(data, function (index, value) {
+        //     let id = $(value).attr('data-id')
+        //     let price = $(value).attr('data-price')
+        //     cart[id] = [price, 1]
+        // })
 
-        var jsonStr = JSON.stringify(cart);
-        sessionStorage.setItem("cart", jsonStr);
-        var cartValue = sessionStorage.getItem("cart");
-        var cartObj = JSON.parse(cartValue);
+        // var jsonStr = JSON.stringify(cart);
+        // sessionStorage.setItem("cart", jsonStr);
+        // var cartValue = sessionStorage.getItem("cart");
+        // var cartObj = JSON.parse(cartValue);
 
-        $('.btn-add').on('click', function () {
-            $(this).hide();
-            $(this).siblings('.status').show();
+        // $('.btn-add').on('click', function () {
+        //     $(this).hide();
+        //     $(this).siblings('.status').show();
+        //     let id = $(this).parents('.item').attr('data-id');
+        //     let count = cartObj[id][1]
+        //     $(this).parents('.footer').siblings('.image-cont').children(".count").text(count);
+        //     $(this).parents('.footer').siblings('.image-cont').children(".count").show();
+        //     MainButtonShow()
+        // })
+
+        $('.plus').on('click', function () {
             let id = $(this).parents('.item').attr('data-id');
             let count = cartObj[id][1]
+            count++
+            cartObj[id][1] = count
+            cartObj[id][0] = cartObj[id][0] * count
             $(this).parents('.footer').siblings('.image-cont').children(".count").text(count);
-            $(this).parents('.footer').siblings('.image-cont').children(".count").show();
-            MainButtonShow()
         })
 
-        // $('.plus').on('click', function () {
-        //     let id = $(this).parents('.item').attr('data-id');
-        //     let count = cartObj[id][1]
-        //     count++
-        //     cartObj[id][1] = count
-        //     cartObj[id][0] = cartObj[id][0] * count
-        //     $(this).parents('.footer').siblings('.image-cont').children(".count").text(count);
-        // })
+        $('.minus').on('click', function () {
+            let id = $(this).parents('.item').attr('data-id');
+            let count = cartObj[id][1]
+            --count
+            if (count < 1) {
+                $(this).parents('.status').hide();
+                $(this).parents('.status').siblings('.btn-add').show();
+                let id = $(this).parents('.item').attr('data-id');
+                cartObj[id][0] = 0
+                cartObj[id][1] = 1
+                $(this).parents('.footer').siblings('.image-cont').children(".count").hide();
+                MainButtonHide()
+            } else {
+                cartObj[id][1] = count
+                cartObj[id][0] = cartObj[id][0] * count
+                $(this).parents('.footer').siblings('.image-cont').children(".count").text(count);
+            }
+        });
 
-        // $('.minus').on('click', function () {
-        //     let id = $(this).parents('.item').attr('data-id');
-        //     let count = cartObj[id][1]
-        //     --count
-        //     if (count < 1) {
-        //         $(this).parents('.status').hide();
-        //         $(this).parents('.status').siblings('.btn-add').show();
-        //         let id = $(this).parents('.item').attr('data-id');
-        //         cartObj[id][0] = 0
-        //         cartObj[id][1] = 1
-        //         $(this).parents('.footer').siblings('.image-cont').children(".count").hide();
-        //         MainButtonHide()
-        //     } else {
-        //         cartObj[id][1] = count
-        //         cartObj[id][0] = cartObj[id][0] * count
-        //         $(this).parents('.footer').siblings('.image-cont').children(".count").text(count);
-        //     }
-        // });
-
-        // $('#edit').on('click', function () {
-        //     $('#food').slideDown();
-        //     $('#orders').slideUp();
-        //     tg.BackButton.hide();
-        // })
+        $('#edit').on('click', function () {
+            $('#food').slideDown();
+            $('#orders').slideUp();
+            tg.BackButton.hide();
+        })
     </script>
 </body>
 
