--- a/index.html
+++ b/index.html
@@ -279,42 +279,42 @@
 
         tg.expand()
 
-        Telegram.WebApp.onEvent('themeChanged', function () {
-            document.documentElement.className = tg.colorScheme;
-        });
+        // Telegram.WebApp.onEvent('themeChanged', function () {
+        //     document.documentElement.className = tg.colorScheme;
+        // });
 
-        Telegram.WebApp.onEvent('themeChanged', function () {
-            document.querySelector('#themeData').innerHTML = JSON.stringify(tg.themeParams, null, 2);
-        });
+        // Telegram.WebApp.onEvent('themeChanged', function () {
+        //     document.querySelector('#themeData').innerHTML = JSON.stringify(tg.themeParams, null, 2);
+        // });
 
-        Telegram.WebApp.onEvent("mainButtonClicked", function () {
-            $('#food').slideUp();
-            $('#orders').slideDown();
-            tg.BackButton.show();
+        // Telegram.WebApp.onEvent("mainButtonClicked", function () {
+        //     $('#food').slideUp();
+        //     $('#orders').slideDown();
+        //     tg.BackButton.show();
 
-        });
+        // });
 
-        Telegram.WebApp.onEvent("backButtonClicked", function () {
-            $('#food').slideDown();
-            $('#orders').slideUp();
-            tg.BackButton.hide();
+        // Telegram.WebApp.onEvent("backButtonClicked", function () {
+        //     $('#food').slideDown();
+        //     $('#orders').slideUp();
+        //     tg.BackButton.hide();
 
-        });
+        // });
 
-        tg.MainButton.text = "Savatga qo`shish";
-        // tg.MainButton.showProgress(true);
+        // tg.MainButton.text = "Savatga qo`shish";
+        // // tg.MainButton.showProgress(true);
 
-        function MainButtonShow(el) {
-            const mainButton = tg.MainButton;
-            mainButton.show();
-        }
+        // function MainButtonShow(el) {
+        //     const mainButton = tg.MainButton;
+        //     mainButton.show();
+        // }
 
-        function MainButtonHide(el) {
-            const mainButton = tg.MainButton;
-            if (mainButton.isVisible) {
-                mainButton.hide();
-            }
-        }
+        // function MainButtonHide(el) {
+        //     const mainButton = tg.MainButton;
+        //     if (mainButton.isVisible) {
+        //         mainButton.hide();
+        //     }
+        // }
 
 
         // // const initData = tg.initData || '';
@@ -325,28 +325,28 @@
         // // document.querySelector('#initDataUnsafe').innerHTML = JSON.stringify(initDataUnsafe, null, 2);
         // // document.querySelector('#themeData').html(JSON.stringify(tg.themeParams, null, 2));
 
-        // let data = $('.item');
-        // var cart = {};
-        // $.each(data, function (index, value) {
-        //     let id = $(value).attr('data-id')
-        //     let price = $(value).attr('data-price')
-        //     cart[id] = [price, 1]
-        // })
+        let data = $('.item');
+        var cart = {};
+        $.each(data, function (index, value) {
+            let id = $(value).attr('data-id')
+            let price = $(value).attr('data-price')
+            cart[id] = [price, 1]
+        })
 
-        // var jsonStr = JSON.stringify(cart);
-        // sessionStorage.setItem("cart", jsonStr);
-        // var cartValue = sessionStorage.getItem("cart");
-        // var cartObj = JSON.parse(cartValue);
+        var jsonStr = JSON.stringify(cart);
+        sessionStorage.setItem("cart", jsonStr);
+        var cartValue = sessionStorage.getItem("cart");
+        var cartObj = JSON.parse(cartValue);
 
-        // $('.btn-add').on('click', function () {
-        //     $(this).hide();
-        //     $(this).siblings('.status').show();
-        //     let id = $(this).parents('.item').attr('data-id');
-        //     let count = cartObj[id][1]
-        //     $(this).parents('.footer').siblings('.image-cont').children(".count").text(count);
-        //     $(this).parents('.footer').siblings('.image-cont').children(".count").show();
-        //     MainButtonShow()
-        // })
+        $('.btn-add').on('click', function () {
+            $(this).hide();
+            $(this).siblings('.status').show();
+            let id = $(this).parents('.item').attr('data-id');
+            let count = cartObj[id][1]
+            $(this).parents('.footer').siblings('.image-cont').children(".count").text(count);
+            $(this).parents('.footer').siblings('.image-cont').children(".count").show();
+            MainButtonShow()
+        })
 
         $('.plus').on('click', function () {
             let id = $(this).parents('.item').attr('data-id');
