--- a/index.html
+++ b/index.html
@@ -4,209 +4,133 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Oops</title>
+    <title>Portefoliya</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
-    <input type="number" step="any" id="summa">
-    <table border="1" padding="1px">
-        <thead>
-            <th>№</th>
-            <th>Boshlangan vaqt</th>
-            <th>Tugagan vaqt</th>
-            <th>Minut</th>
-            <th>Summa</th>
-            <th>Ammalar</th>
-        </thead>
-        <tbody id="table">
-            <tr>
-                <td>1</td>
-                <td class="from"></td>
-                <td class="to"></td>
-                <td class="minut"></td>
-                <td class="summa"></td>
-                <td style="display: flex; align-items:center;justify-content:center">
-                    <button class="boshlash" onclick="boshlash(this, 1)">Boshlash</button>
-                    <button class="tugatish" disabled onclick="tugatish(this, 1)">Tugatish</button>
-                    <button class="ochirish" onclick="ochirish(this, 1)">Tozalash</button>
-                </td>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td class="from"></td>
-                <td class="to"></td>
-                <td class="minut"></td>
-                <td class="summa"></td>
-                <td style="display: flex; align-items:center;justify-content:center">
-                    <button class="boshlash" onclick="boshlash(this, 2)">Boshlash</button>
-                    <button class="tugatish" disabled onclick="tugatish(this, 2)">Tugatish</button>
-                    <button class="ochirish" onclick="ochirish(this, 2)">Tozalash</button>
-                </td>
-            </tr>
-            <tr>
-                <td>3</td>
-                <td class="from"></td>
-                <td class="to"></td>
-                <td class="minut"></td>
-                <td class="summa"></td>
-                <td style="display: flex; align-items:center;justify-content:center">
-                    <button class="boshlash" onclick="boshlash(this,3)">Boshlash</button>
-                    <button class="tugatish" disabled onclick="tugatish(this,3)">Tugatish</button>
-                    <button class="ochirish" onclick="ochirish(this,3)">Tozalash</button>
-                </td>
-            </tr>
-            <tr>
-                <td>4</td>
-                <td class="from"></td>
-                <td class="to"></td>
-                <td class="minut"></td>
-                <td class="summa"></td>
-                <td style="display: flex; align-items:center;justify-content:center">
-                    <button class="boshlash" onclick="boshlash(this,4)">Boshlash</button>
-                    <button class="tugatish" disabled onclick="tugatish(this,4)">Tugatish</button>
-                    <button class="ochirish" onclick="ochirish(this,4)">Tozalash</button>
-                </td>
-            </tr>
-        </tbody>
-    </table>
+    <div class="main">
+        <div class="sidebar">
+            <img src="/icons/menu.svg" alt="menu" srcset="" class="menu-svg">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus rerum esse a, soluta distinctio quas
+            tempora possimus illum. Praesentium error debitis earum at exercitationem eveniet ratione perferendis
+            voluptatem? Repudiandae, facilis.
+        </div>
+        <div class="container">
+            <img src="/icons/menu.svg" alt="menu" srcset="" class="menu-svg" id="menu">
+            <div class="banner">
+                <div class="banner-info">
+                    <div>
+                        <span class="title">
+                            Hello, world
+                        </span>
+                        <h1>
+                            My name is Izzatbek. I am php backend developer from Uzbekistan.
+                        </h1>
+                        <a href="#contact" class="btn link">
+                            Contact me
+                        </a>
+                    </div>
+                </div>
+                <div class="banner-image">
+                    <img src="/images/fox.png" alt="rasm" srcset="" class="image-self">
+                </div>
+            </div>
+            <div class="content">
+                <div class="contact">
+                    <div class="contact-info">
+                        <span class="title title-text">
+                            Skillis
+                        </span>
+                        <p>
+                            Lorem Ipsum is simply dummy text of the printing and type <br>
+                            setting industry. Lorem ipsum dolor sit amet.
+                        </p>
 
-    <script>
-        // Localstorage
-        const loc = localStorage
-        // Tablening body qismi
-        const table_body = document.getElementById('table');
-        // Yuqoridegi oldindan belgilab qo'yiladigan summa
-        const narx = document.getElementById('summa');
+                        <ul class="skilis-ul">
+                            <li>Lorem, ipsum dolor.</li>
+                            <li>Lorem, ipsum dolor.</li>
+                            <li>Lorem, ipsum dolor.</li>
+                            <li>Lorem, ipsum dolor.</li>
+                        </ul>
+                    </div>
+                    <div class="contact-form sklis-right">
+                        <div class="skillis-div">
+                            <span>PHP</span>
+                            <span>Python</span>
+                            <span>Javascript</span>
+                            <span>Laravel</span>
+                            <span>Yii2</span>
+                            <span>jQuery</span>
+                            <span>Sql</span>
+                            <span>MySQL</span>
+                            <span>Bootstrap</span>
+                            <span>Html</span>
+                            <span>CSS</span>
+                            <span>Telegram bot</span>
+                            <span>Git</span>
+                            <span>API</span>
+                            <span>Linux</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="contact">
+                    <div class="contact-info">
+                        <span class="title title-text">
+                            Contact
+                        </span>
+                        <p>
+                            Lorem Ipsum is simply dummy text of the printing and type <br>
+                            setting industry. Lorem ipsum dolor sit amet.
+                        </p>
 
-        // Tugamalar
-        const boshlash_btns = document.querySelectorAll('.boshlash');
-        const tugatish_btns = document.querySelectorAll('.tugatish');
-        const ochirish_btns = document.querySelectorAll('.ochirish');
+                        <p>
+                            MY PHONE: <br>
+                            <a href="tel:+998937278014">+998 93 727 80 14</a>
+                        </p>
+                        <p>
+                            EMAIL: <br>
+                            <a href="mailto:izzatbekmajidov200020@gmail.com">izzatbekmajidov200020@gmail.com</a>
+                        </p>
+                    </div>
+                    <form id="contact" class="contact-form" action="#contact">
+                        <input type="text" id="form-name" placeholder="NAME" class="input">
+                        <input type="email" id="form-email" placeholder="EMAIL" class="input">
+                        <textarea id="form-message" cols="30" rows="10" placeholder="Your message"
+                            class="textarea"></textarea>
+                        <div class="form-footer">
+                            <small class="form-input-validate">Yuqoridagi fo'rmani barcha qismlarini to'ldirish
+                                majburiy</small>
+                            <button type="submit" class="btn form-btn">
+                                Send
+                            </button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <div class="footer">
+                <div class="footer-email">
+                    <a href="mailto:izzatbekmajidov200020@gmail.com" class="link loader">
+                        <img src="/icons/email.svg" alt="email" srcset="" class="email-svg">
+                        Email me
+                    </a>
+                </div>
+                <div class="footer-social">
+                    <a href="https://github.com/Izzatbek20" class="link loader">
+                        <img src="/icons/github.svg" alt="email" srcset="" class="github-svg">
+                    </a>
+                    <a href="https://t.me/i2000_code" class="link loader">
+                        <img src="/icons/telegram.svg" alt="telegram" srcset="" class="telegram-svg">
+                    </a>
+                    <a href="tel:+998937278014" class="link loader">
+                        <img src="/icons/phone.svg" alt="phone" srcset="" class="phone-svg">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
 
-        window.addEventListener('load', () => {
-            const table_tr = table_body.children
-            for (let index = 0; index < table_tr.length; index++) {
-                const element = table_tr[index].children;
-                for (let index_in = 0; index_in < element.length; index_in++) {
-                    const element_in = element[index_in];
-                    const loc_data = loc.getItem("row" + (index + 1))
-                    if (loc_data) {
-                        const data_json = JSON.parse(loc_data)
-                        if (element_in.className) {
-                            if (data_json.from) {
-                                element_in.innerText = data_json[element_in.className]
-                            }
-                        }
-                        if (index_in == 5) {
-                            const amallar_btn = element_in.children
-                            if (data_json.btn) {
-                                if (!data_json.btn.boshlash) {
-                                    amallar_btn[0].setAttribute('disabled', "")
-                                } else {
-                                    amallar_btn[0].removeAttribute('disabled')
-                                }
-                                if (!data_json.btn.tugatish) {
-                                    amallar_btn[1].setAttribute('disabled', "")
-                                } else {
-                                    amallar_btn[1].removeAttribute('disabled')
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-
-            narx.value = loc.getItem('narx')
-        })
-
-        narx.addEventListener('change', element => {
-            loc.setItem('narx', element.target.value)
-        })
-
-        // Sanoqni boshlash
-        function boshlash(element, nomer) {
-            const date = new Date()
-
-            const ammalar = element.parentElement
-            const summa = ammalar.previousElementSibling
-            const minut = summa.previousElementSibling
-            const to = minut.previousElementSibling
-            const from = to.previousElementSibling
-
-            from.innerHTML = date.getHours() + " : " + date.getMinutes()
-
-            element.setAttribute('disabled', "")
-            element.nextElementSibling.removeAttribute('disabled')
-
-            // Localstoragega ma'lumot yozish
-            loc.setItem('row' + nomer, JSON.stringify({
-                'from': from.innerText,
-                'to': to.innerText,
-                'minut': minut.innerText,
-                'summa': summa.innerText,
-                'btn': {
-                    'boshlash': false,
-                    'tugatish': true,
-                }
-            }))
-        }
-
-        // Sanoqni tugatish
-        function tugatish(element, nomer) {
-
-            const ammalar = element.parentElement
-            const summa = ammalar.previousElementSibling
-            const minut = summa.previousElementSibling
-            const to = minut.previousElementSibling
-            const from = to.previousElementSibling
-
-            const from_arr = from.innerText.split(':')
-
-            const new_date = new Date()
-            const old_date = new Date(new_date.getFullYear(), new_date.getMonth(), new_date.getDay(), from_arr[0], from_arr[1])
-            
-            // Vaqt oraligini minutga o'tkazib olamiz
-            const new_date_minut = (new_date.getHours() * 60) + new_date.getMinutes()
-            const old_date_minut = (old_date.getHours() * 60) + old_date.getMinutes()
-            const oraliq_minut = Math.abs(new_date_minut - old_date_minut)
-            const sum = oraliq_minut * narx.value
-
-            to.innerText = new_date.getHours() + " : " + new_date.getMinutes()
-            minut.innerText = oraliq_minut
-            summa.innerText = `${sum.toLocaleString('es-US')} so'm`
-
-            element.setAttribute('disabled', "")
-
-            // Localstoragega ma'lumot yozish
-            loc.setItem('row' + nomer, JSON.stringify({
-                'from': from.innerText,
-                'to': to.innerText,
-                'minut': minut.innerText,
-                'summa': summa.innerText,
-                'btn': {
-                    'boshlash': false,
-                    'tugatish': false,
-                }
-            }))
-        }
-
-        // Tr ni o'chirish
-        function ochirish(element, nomer) {
-            if (prompt('Rostdan ham ushbu qatorni tozalamoqchimisiz?')) {
-
-                const tr_children = element.parentElement.parentElement.children
-                for (let index = 1; index < (tr_children.length - 1); index++) {
-                    const td = tr_children[index];
-                    td.innerText = ""
-                }
-
-                element.previousElementSibling.previousElementSibling.removeAttribute('disabled')
-
-                // Localstoragedan ma'lumotlarni o'chirish
-                loc.removeItem('row' + nomer)
-            }
-        }
-    </script>
+    <script src="main.js"></script>
 </body>
 
 </html>
