--- a/index.html
+++ b/index.html
@@ -4,133 +4,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portefoliya</title>
-    <link rel="stylesheet" href="main.css">
+    <title>Izzatbek Majidov - Portefoliya</title>
+    <meta name="description" content="Mening ismim Izzatbek. Men php backend dasturchisiman.">
+    <link href="/dist/main.css" rel="stylesheet">
+    <link href="/css/style.css" rel="stylesheet">
 </head>
 
-<body>
-    <div class="main">
-        <div class="sidebar">
-            <img src="/icons/menu.svg" alt="menu" srcset="" class="menu-svg">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus rerum esse a, soluta distinctio quas
-            tempora possimus illum. Praesentium error debitis earum at exercitationem eveniet ratione perferendis
-            voluptatem? Repudiandae, facilis.
-        </div>
-        <div class="container">
-            <img src="/icons/menu.svg" alt="menu" srcset="" class="menu-svg" id="menu">
-            <div class="banner">
-                <div class="banner-info">
-                    <div>
-                        <span class="title">
-                            Hello, world
-                        </span>
-                        <h1>
-                            My name is Izzatbek. I am php backend developer from Uzbekistan.
-                        </h1>
-                        <a href="#contact" class="btn link">
-                            Contact me
-                        </a>
-                    </div>
-                </div>
-                <div class="banner-image">
-                    <img src="/images/fox.png" alt="rasm" srcset="" class="image-self">
-                </div>
-            </div>
-            <div class="content">
-                <div class="contact">
-                    <div class="contact-info">
-                        <span class="title title-text">
-                            Skillis
-                        </span>
-                        <p>
-                            Lorem Ipsum is simply dummy text of the printing and type <br>
-                            setting industry. Lorem ipsum dolor sit amet.
-                        </p>
+<body class="bg-black">
 
-                        <ul class="skilis-ul">
-                            <li>Lorem, ipsum dolor.</li>
-                            <li>Lorem, ipsum dolor.</li>
-                            <li>Lorem, ipsum dolor.</li>
-                            <li>Lorem, ipsum dolor.</li>
-                        </ul>
-                    </div>
-                    <div class="contact-form sklis-right">
-                        <div class="skillis-div">
-                            <span>PHP</span>
-                            <span>Python</span>
-                            <span>Javascript</span>
-                            <span>Laravel</span>
-                            <span>Yii2</span>
-                            <span>jQuery</span>
-                            <span>Sql</span>
-                            <span>MySQL</span>
-                            <span>Bootstrap</span>
-                            <span>Html</span>
-                            <span>CSS</span>
-                            <span>Telegram bot</span>
-                            <span>Git</span>
-                            <span>API</span>
-                            <span>Linux</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="contact">
-                    <div class="contact-info">
-                        <span class="title title-text">
-                            Contact
-                        </span>
-                        <p>
-                            Lorem Ipsum is simply dummy text of the printing and type <br>
-                            setting industry. Lorem ipsum dolor sit amet.
-                        </p>
-
-                        <p>
-                            MY PHONE: <br>
-                            <a href="tel:+998937278014">+998 93 727 80 14</a>
-                        </p>
-                        <p>
-                            EMAIL: <br>
-                            <a href="mailto:izzatbekmajidov200020@gmail.com">izzatbekmajidov200020@gmail.com</a>
-                        </p>
-                    </div>
-                    <form id="contact" class="contact-form" action="#contact">
-                        <input type="text" id="form-name" placeholder="NAME" class="input">
-                        <input type="email" id="form-email" placeholder="EMAIL" class="input">
-                        <textarea id="form-message" cols="30" rows="10" placeholder="Your message"
-                            class="textarea"></textarea>
-                        <div class="form-footer">
-                            <small class="form-input-validate">Yuqoridagi fo'rmani barcha qismlarini to'ldirish
-                                majburiy</small>
-                            <button type="submit" class="btn form-btn">
-                                Send
-                            </button>
-                        </div>
-                    </form>
-                </div>
-            </div>
-            <div class="footer">
-                <div class="footer-email">
-                    <a href="mailto:izzatbekmajidov200020@gmail.com" class="link loader">
-                        <img src="/icons/email.svg" alt="email" srcset="" class="email-svg">
-                        Email me
-                    </a>
-                </div>
-                <div class="footer-social">
-                    <a href="https://github.com/Izzatbek20" class="link loader">
-                        <img src="/icons/github.svg" alt="email" srcset="" class="github-svg">
-                    </a>
-                    <a href="https://t.me/i2000_code" class="link loader">
-                        <img src="/icons/telegram.svg" alt="telegram" srcset="" class="telegram-svg">
-                    </a>
-                    <a href="tel:+998937278014" class="link loader">
-                        <img src="/icons/phone.svg" alt="phone" srcset="" class="phone-svg">
-                    </a>
-                </div>
+    <div class="block relative w-full px-10 md:px-28 lg:px-28 xl:px-28 2xl:px-28">
+        <!-- Banner -->
+        <div id="#banner" class="text-white h-screen flex items-center">
+            <div>
+                <h2 class="title">Salom, dunyo</h2>
+                <h2 class="text-4xl md:text-6xl lg:text-6xl xl:text-6xl 2xl:text-6xl font-bold">Mening ismim <span
+                        class="name">Izzatbek</span>. Men php backend
+                    dasturchisiman.</h2>
+                <button
+                    class="btn text-4xl border py-2 px-5 mt-5 hover:border-transparent hover:bg-white hover:text-black">Men
+                    bilan bog'lanish</button>
             </div>
         </div>
+        <!-- /Banner -->
+
+        <!-- Skillis -->
+        <!-- <div id="#skillis" class="text-white h-screen">
+            <h2 class="title">Skillis</h2>
+            <div class="flex md:flex-row lg:flex-row xl:flex-row 2xl:flex-row flex-col">
+                <div class="border flex-1 pr-5">
+                    <p class="text-xl">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet voluptatem consequatur quaerat,
+                        quod
+                        dolores magnam!
+                    <ul class="ml-10">
+                        <li>Lorem ipsum dolor sit amet.</li>
+                        <li>Lorem ipsum dolor sit amet.</li>
+                        <li>Lorem ipsum dolor sit amet.</li>
+                        <li>Lorem ipsum dolor sit amet.</li>
+                    </ul>
+                    </p>
+                </div>
+                <div class="border flex-1">
+                    <span>PHP</span>
+                    <span>Python</span>
+                    <span>Javascript</span>
+                    <span>Laravel</span>
+                    <span>Yii2</span>
+                    <span>jQuery</span>
+                    <span>Sql</span>
+                    <span>MySQL</span>
+                    <span>Bootstrap</span>
+                    <span>Html</span>
+                    <span>CSS</span>
+                    <span>Telegram bot</span>
+                    <span>Git</span>
+                    <span>API</span>
+                    <span>Linux</span>
+                </div>
+            </div>
+        </div> -->
+        <!-- /Skillis -->
     </div>
 
-    <script src="main.js"></script>
 </body>
 
 </html>
