Tuzatishlar va Skillis

--- a/index.html
+++ b/index.html
@@ -16,53 +16,53 @@
         <!-- Banner -->
         <div id="#banner" class="text-white h-screen flex items-center">
             <div>
-                <h2 class="title">Salom, dunyo</h2>
-                <h2 class="text-4xl md:text-6xl lg:text-6xl xl:text-6xl 2xl:text-6xl font-bold">Mening ismim <span
-                        class="name">Izzatbek</span>. Men php backend
+                <h2 class="title text-sm sm:text-lg md:text-base lg:text-lg xl:text-xl">Salom, dunyo</h2>
+                <h2 class="text-5xl md:text-6xl lg:text-6xl xl:text-6xl 2xl:text-6xl font-bold leading-tight mb-10">
+                    Mening ismim <span class="name">Izzatbek</span>. Men php backend
                     dasturchisiman.</h2>
                 <button
-                    class="btn text-4xl border py-2 px-5 mt-5 hover:border-transparent hover:bg-white hover:text-black">Men
+                    class="btn text-4xl border py-2 px-5 mt-5 hover:border-transparent hover:bg-white hover:text-black text-sm sm:text-lg md:text-base lg:text-lg xl:text-xl">Men
+
                     bilan bog'lanish</button>
             </div>
         </div>
         <!-- /Banner -->
 
         <!-- Skillis -->
-        <!-- <div id="#skillis" class="text-white h-screen">
-            <h2 class="title">Skillis</h2>
+        <div id="#skillis" class="text-white h-screen">
+            <h2 class="title text-sm sm:text-lg md:text-base lg:text-lg xl:text-xl">Malakalar</h2>
             <div class="flex md:flex-row lg:flex-row xl:flex-row 2xl:flex-row flex-col">
-                <div class="border flex-1 pr-5">
-                    <p class="text-xl">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet voluptatem consequatur quaerat,
-                        quod
-                        dolores magnam!
-                    <ul class="ml-10">
-                        <li>Lorem ipsum dolor sit amet.</li>
-                        <li>Lorem ipsum dolor sit amet.</li>
-                        <li>Lorem ipsum dolor sit amet.</li>
-                        <li>Lorem ipsum dolor sit amet.</li>
+                <div class="flex-1 pr-10 mb-20">
+                    <h2 class="text-2xl font-size mb-10 text-4xl leading-tight md:text-5xl lg:text-5xl xl:text-5xl">
+                        Mutaxassis sifatida ega bo'lgan ko'nikmalarim
+                    </h2>
+                    <ul class="ml-10 list-disc text-base md:text-lg lg:text-xl xl:text-xl">
+                        <li>Turli xil murakkablikdagi veb-saytlar yaratish .</li>
+                        <li>Ma'lumotlar bazasini ishlab chiqish.</li>
+                        <li>Telegram botlarini yaratish.</li>
+                        <li>E-commerce (elektron tijorat).</li>
+                        <li>CRM tizimlari.</li>
+                        <li>API ishlab chiqish.</li>
+                        <li>Linux bilan ishlash (ozmoz, boshlang'ich kommandalar :)</li>
                     </ul>
-                    </p>
                 </div>
-                <div class="border flex-1">
-                    <span>PHP</span>
-                    <span>Python</span>
-                    <span>Javascript</span>
-                    <span>Laravel</span>
-                    <span>Yii2</span>
-                    <span>jQuery</span>
-                    <span>Sql</span>
-                    <span>MySQL</span>
-                    <span>Bootstrap</span>
-                    <span>Html</span>
-                    <span>CSS</span>
-                    <span>Telegram bot</span>
-                    <span>Git</span>
-                    <span>API</span>
-                    <span>Linux</span>
+                <div
+                    class="flex-1 grid grid-flow-row gap-4 grid-cols-3 xl:grid-cols-5 lg:grid-cols-4 md:grid-cols-3 sm:grid-cols-4">
+                    <img src="/images/skillis/php.png" class="w-14 sm:w-14 md:w-20" alt="PHP">
+                    <img src="/images/skillis/laravel.png" class="w-14 sm:w-14 md:w-20" alt="Laravel">
+                    <img src="/images/skillis/yii2.png" class="w-14 sm:w-14 md:w-20" alt="Yii2">
+                    <img src="/images/skillis/mysql.png" class="w-14 sm:w-14 md:w-20" alt="MySQL">
+                    <img src="/images/skillis/html.png" class="w-14 sm:w-14 md:w-20" alt="Html">
+                    <img src="/images/skillis/css.png" class="w-14 sm:w-14 md:w-20" alt="CSS">
+                    <img src="/images/skillis/javascript.png" class="w-14 sm:w-14 md:w-20" alt="Javascript">
+                    <img src="/images/skillis/jQuery.png" class="w-14 sm:w-14 md:w-20" alt="jQuery">
+                    <img src="/images/skillis/bootstrap.jpg" class="w-14 sm:w-14 md:w-20" alt="Bootstrap">
+                    <img src="/images/skillis/git.png" class="w-14 sm:w-14 md:w-20" alt="Git">
+                    <img src="/images/skillis/python.png" class="w-14 sm:w-14 md:w-20" alt="Python">
+                    <img src="/images/skillis/aiogram.png" class="w-14 sm:w-14 md:w-20" alt="Aiogram">
                 </div>
             </div>
-        </div> -->
+        </div>
         <!-- /Skillis -->
     </div>
 
