komanda sozini buyurqa almashtirdim

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <li>E-commerce (elektron tijorat).</li>
                         <li>CRM tizimlari.</li>
                         <li>API ishlab chiqish.</li>
-                        <li>Linux bilan ishlash (ozmoz, boshlang'ich kommandalar :)</li>
+                        <li>Linux bilan ishlash (ozmoz, boshlang'ich buyruqlar :)</li>
                     </ul>
                 </div>
                 <div
