--- a/index.html
+++ b/index.html
@@ -18,15 +18,22 @@
 
     <div class="block relative w-full px-10 md:px-28 lg:px-28 xl:px-28 2xl:px-28">
         <!-- Banner -->
-        <div id="#banner" class="text-white h-screen flex items-center">
+        <div id="#banner" class="text-white h-screen flex items-center relative">
             <div>
                 <h2 class="title text-sm sm:text-lg md:text-base lg:text-lg xl:text-xl">Salom, dunyo</h2>
-                <h2 class="text-5xl md:text-6xl lg:text-6xl xl:text-6xl 2xl:text-6xl font-bold leading-tight mb-10">
+                <h2 class="text-5xl md:text-6xl lg:text-6xl xl:text-6xl 2xl:text-6xl font-bold leading-tight mb-20">
                     Mening ismim <span class="name">Izzatbek</span>. Men php backend
                     dasturchisiman.</h2>
                 <a href="#contact"
-                    class="btn border py-2 px-5 mt-10 hover:border-transparent hover:bg-white hover:text-black text-sm sm:text-lg md:text-base lg:text-lg xl:text-xl">
+                    class="btn border py-5 px-5 hover:border-transparent hover:bg-white hover:text-black text-md sm:text-lg md:text-base lg:text-lg xl:text-xl">
                     Men bilan bog'lanish</a>
+                </span>
+            </div>
+            <div id="bottom-arrow" class="">
+                <div class="box">
+                    <span></span>
+                    <p>Aylantiring</p>
+                </div>
             </div>
         </div>
         <!-- /Banner -->
