--- a/index.html
+++ b/index.html
@@ -29,12 +29,20 @@
                     Men bilan bog'lanish</a>
                 </span>
             </div>
-            <div id="bottom-arrow" class="">
-                <div class="box">
-                    <span></span>
-                    <p>Aylantiring</p>
+            <div class="mous_scroll">
+                <div class="bottom-arrow-box">
+                    <span class="scroll-btn">
+                        <a href="#">
+                            <span class="mouse">
+                                <span>
+                                </span>
+                            </span>
+                        </a>
+                    </span>
                 </div>
+                <p class="mous_scroll_text">aylantiring</p>
             </div>
+
         </div>
         <!-- /Banner -->
 
