--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
 
     <script src="/js/split/js/splide.min.js"></script>
     <script src="/js/split-auto-scroll/js/splide-extension-auto-scroll.min.js"></script>
+
+    <script src="js/gsap/minified/gsap.min.js"></script>
+    <script src="js/gsap/minified/TextPlugin.min.js"></script>
 </head>
+
+
+
 
 <body class="bg-black select-none">
 
@@ -22,13 +28,26 @@
             <div>
                 <h2 class="title text-sm sm:text-lg md:text-base lg:text-lg xl:text-xl">Salom, dunyo</h2>
                 <h2 class="text-5xl md:text-6xl lg:text-6xl xl:text-6xl 2xl:text-6xl font-bold leading-tight mb-20">
+                    <div class="banner-text-1 inline"></div>
+                    <span class="name inline"></span>
+                    <div class="banner-text-2 inline"></div>
+                    <div class="cursor inline">|</div>
+                </h2>
+                <a href="#contact"
+                    class="btn border py-5 px-5 hover:border-transparent hover:bg-white hover:text-black text-md sm:text-lg md:text-base lg:text-lg xl:text-xl">
+                    Men bilan bog'lanish</a>
+                </span>
+            </div>
+            <!-- <div class="flex-1">
+                <h2 class="title text-sm sm:text-lg md:text-base lg:text-lg xl:text-xl">Salom, dunyo</h2>
+                <h2 class="text-5xl md:text-6xl lg:text-6xl xl:text-6xl 2xl:text-6xl font-bold leading-tight mb-20">
                     Mening ismim <span class="name">Izzatbek</span>. Men php backend
                     dasturchisiman.</h2>
                 <a href="#contact"
                     class="btn border py-5 px-5 hover:border-transparent hover:bg-white hover:text-black text-md sm:text-lg md:text-base lg:text-lg xl:text-xl">
                     Men bilan bog'lanish</a>
                 </span>
-            </div>
+            </div> -->
             <div class="mous_scroll">
                 <div class="bottom-arrow-box">
                     <span class="scroll-btn">
@@ -176,6 +195,7 @@
         </div>
         <!-- /Footer -->
     </div>
+    <script src="js/gsap.js"></script>
     <script src="js/main.js"></script>
 </body>
 
