--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
     <script src="js/gsap/minified/gsap.min.js"></script>
     <script src="js/gsap/minified/TextPlugin.min.js"></script>
+    <script src="js/gsap/minified/MotionPathPlugin.min.js"></script>
+    <script src="js/gsap/minified/CustomEase.min.js"></script>
 </head>
 
 
@@ -25,17 +27,24 @@
     <div class="block relative w-full px-10 md:px-28 lg:px-28 xl:px-28 2xl:px-28">
         <!-- Banner -->
         <div id="#banner" class="text-white h-screen flex items-center relative">
-            <div>
-                <h2 class="title text-sm sm:text-lg md:text-base lg:text-lg xl:text-xl">Salom, dunyo</h2>
+            <div class="overflow-hidden">
+                <h2 class="title text-sm sm:text-lg md:text-base lg:text-lg xl:text-xl">
+                    <div class="banner-coment inline-block"></div>
+                    <div class="cursor-coment inline" id="cursor-coment">|</div>
+                </h2>
                 <h2 class="text-5xl md:text-6xl lg:text-6xl xl:text-6xl 2xl:text-6xl font-bold leading-tight mb-20">
                     <div class="banner-text-1 inline"></div>
                     <span class="name inline"></span>
                     <div class="banner-text-2 inline"></div>
-                    <div class="cursor inline">|</div>
+                    <div class="cursor inline" id="cursor">|</div>
                 </h2>
-                <a href="#contact"
-                    class="btn border py-5 px-5 hover:border-transparent hover:bg-white hover:text-black text-md sm:text-lg md:text-base lg:text-lg xl:text-xl">
-                    Men bilan bog'lanish</a>
+                <a href="#contact" id="banner-contact-btn"
+                    class="btn border relative py-5 px-5 inline-block hover:border-transparent hover:bg-white hover:text-black text-md sm:text-lg md:text-base lg:text-lg xl:text-xl">
+                    Men bilan bog'lanish
+                    <!-- <div id="banner-contact-btn-hidden"
+                        class="absolute left-0 top-0 w-full h-full scale-105 bg-black btn py-5 px-5 inline-block text-md sm:text-lg md:text-base lg:text-lg xl:text-xl">
+                    </div> -->
+                </a>
                 </span>
             </div>
             <!-- <div class="flex-1">
