--- a/index.html
+++ b/index.html
@@ -17,16 +17,18 @@
     <script src="js/gsap/minified/TextPlugin.min.js"></script>
     <script src="js/gsap/minified/MotionPathPlugin.min.js"></script>
     <script src="js/gsap/minified/CustomEase.min.js"></script>
+    <script src="js/gsap/minified/ScrollTrigger.min.js"></script>
+    <script src="js/gsap/minified/ScrollToPlugin.min.js"></script>
 </head>
 
 
 
 
-<body class="bg-black select-none">
+<body class="bg-black select-none" id="body">
 
     <div class="block relative w-full px-10 md:px-28 lg:px-28 xl:px-28 2xl:px-28">
         <!-- Banner -->
-        <div id="#banner" class="text-white h-screen flex items-center relative">
+        <div id="banner" class="text-white h-screen flex items-center relative banner">
             <div class="overflow-hidden">
                 <h2 class="title text-sm sm:text-lg md:text-base lg:text-lg xl:text-xl">
                     <div class="banner-coment inline-block"></div>
@@ -59,8 +61,8 @@
             </div> -->
             <div class="mous_scroll">
                 <div class="bottom-arrow-box">
-                    <span class="scroll-btn">
-                        <a href="#">
+                    <span class="scroll-btn" id="toSkillis">
+                        <a href="#skillis">
                             <span class="mouse">
                                 <span>
                                 </span>
@@ -75,7 +77,7 @@
         <!-- /Banner -->
 
         <!-- Skillis -->
-        <div id="#skillis" class="text-white mt-32">
+        <div id="skillis" class="text-white mt-32">
             <h2 class="title text-sm sm:text-lg md:text-base lg:text-lg xl:text-xl">Malakalar</h2>
             <div class="flex md:flex-row lg:flex-row xl:flex-row 2xl:flex-row flex-col mb-10">
                 <div class="flex-1 mb-20 md:pr-5 lg:pr-10 xl:pr-20">
@@ -115,7 +117,7 @@
         <!-- /Skillis -->
 
         <!-- Projects -->
-        <div id="#Projects" class="text-white mt-32">
+        <div id="#projects" class="text-white mt-32">
             <h2 class="title text-sm sm:text-lg md:text-base lg:text-lg xl:text-xl">Loyihalar</h2>
             <div class="flex md:flex-row lg:flex-row xl:flex-row 2xl:flex-row flex-col mb-10">
                 <div class="flex-1 mb-20">
