--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
                 </div>
                 <div
                     class="flex-1 grid grid-flow-row gap-4 grid-cols-3 xl:grid-cols-5 lg:grid-cols-4 md:grid-cols-3 sm:grid-cols-4">
-                    <img src="/images/skillis/php.png" class="w-14 sm:w-14 md:w-20" alt="PHP">
-                    <img src="/images/skillis/laravel.png" class="w-14 sm:w-14 md:w-20" alt="Laravel">
+                    <img src="/images/skillis/php.png" class="w-14 sm:w-14 md:w-20 php" alt="PHP">
+                    <!-- <img src="/images/skillis/laravel.png" class="w-14 sm:w-14 md:w-20" alt="Laravel">
                     <img src="/images/skillis/yii2.png" class="w-14 sm:w-14 md:w-20" alt="Yii2">
                     <img src="/images/skillis/mysql.png" class="w-14 sm:w-14 md:w-20" alt="MySQL">
                     <img src="/images/skillis/html.png" class="w-14 sm:w-14 md:w-20" alt="Html">
@@ -106,7 +106,7 @@
                     <img src="/images/skillis/bootstrap.jpg" class="w-14 sm:w-14 md:w-20" alt="Bootstrap">
                     <img src="/images/skillis/git.png" class="w-14 sm:w-14 md:w-20" alt="Git">
                     <img src="/images/skillis/python.png" class="w-14 sm:w-14 md:w-20" alt="Python">
-                    <img src="/images/skillis/aiogram.png" class="w-14 sm:w-14 md:w-20" alt="Aiogram">
+                    <img src="/images/skillis/aiogram.png" class="w-14 sm:w-14 md:w-20" alt="Aiogram"> -->
                 </div>
             </div>
             <a href="/images/Resume.png" download="" class="underline hover:text-zinc-800 flex align-bottom">
